<resources>
    <string name="app_name">TDGJSN</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Inicio">Inicio</string>
    <string name="Calendario">Calendario</string>
    <string name="Grupos">Grupos</string>
    <string name="Tabla_General">Tabla General</string>
    <string name="Reglamento">Estadísticas</string>
    <string name="Historial_de_Campeonatos">Historial de Campeonatos</string>
    <string name="Compartir">Compartir</string>
    <string name="Salir">Salir</string>

</resources>